add lock